<resources>
    <string name="app_name">导航支付Demo</string>

    <!--地图模式 -->
    <string name="common_map">标准地图</string>
    <string name="satellite_map">卫星地图</string>
    <string name="night_map">夜间模式</string>

    <!--导航模式-->
    <string name="drive_nav_mode">驾车模式</string>
    <string name="bus_nav_mode">公交模式</string>
    <string name="ride_nav_mode">骑行模式</string>
    <string name="walk_nav_mode">步行模式</string>

    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="app_tip">提示</string>
    
    <!-- PayActivity -->
    <string name="input_pay_money">请输入充值金额</string>
    <string name="select_pay_type_text">请选择支付方式:</string>
    <string name="alipay_text">支付宝</string>
    <string name="wechat_text">微信</string>
    <string name="recharge_text">充值</string>

    <string name="unifiedorder_v3_wx">APP支付生成预支付订单</string>
    <string name="pay__pre_by_wxap">生成APP微信支付参数</string>
    <string name="pay_by_wx_title">通过微信支付</string>
    <string name="pay_by_wxap">调起微信支付</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>

    <!--权限检查-->
    <string name="help">帮助</string>
    <string name="string_help_text">帮助</string>
    <string name="quit">退出</string>
    <string name="settings">设置</string>

    <string name="app_id">科大讯飞Appid</string>

</resources>
