<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/recharge_edite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_pay_money"/>
        <RadioGroup
            android:id="@+id/recharge_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <RadioButton
                android:id="@+id/alipay_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alipay_text"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/wechat_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wechat_text"/>
        </RadioGroup>
        <Button
            android:id="@+id/recharge_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recharge_text"
            android:onClick="toRecharge"/>
    </LinearLayout>
</RelativeLayout>