<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.amap.api.maps.MapView
        android:id="@+id/map_3d_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></com.amap.api.maps.MapView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <AutoCompleteTextView
                android:id="@+id/search_auto_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"></AutoCompleteTextView>
            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="搜索"
                android:onClick="searchAround"
                android:layout_weight="1"/>
        </LinearLayout>
        <ListView
            android:id="@+id/input_list"
            android:layout_width="match_parent"
            android:layout_height="300dp">
        </ListView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true">
        <Button
            android:id="@+id/common_map_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonClick"
            android:text="@string/common_map"/>
        <Button
            android:id="@+id/satellite_map_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonClick"
            android:text="@string/satellite_map"/>
        <Button
            android:id="@+id/night_map_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonClick"
            android:text="@string/night_map"/>
    </LinearLayout>
</RelativeLayout>